# ngameboy

./: README.md
src/: CMakeLists.txt  app.cpp
src/core/: CMakeLists.txt  bootstrap_rom.h  cartridge.cpp  cartridge.h  common.cpp  common.h  cpu.cpp  cpu.h  gpu.cpp  gpu.h  hardware.h  inst_arith.h  inst_bit.h  inst_impl.h  inst_jp.h  inst_ld.h  inst_misc.h  inst_stack.h  instruction.h  instruction_decoder.cpp  instruction_decoder.h  instruction_opcode.h  instruction_reader.h  joypad.h  lcd_controller.cpp  lcd_controller.h  lcd_displayer.h  memory.cpp  memory.h  memory_operator.h  pixelmap.cpp  pixelmap.h  special_registers.h  timer.cpp  timer.h  virtual_machine.cpp  virtual_machine.h
